# gitlab-mcp-code-review

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mcp-config-example.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
tests/: test_server.py
